fix: fix ultrawide overflow and dynamic resize issue
* fix: fix ultrawide overflow and dynamic resize issue

* fix: adjust tooltip centering due to changes in dashboard sizing

* fix: slightly imporoved tooltip centering on mobile AND desktop dimensions

* fix: refactored SectionContent from grid to flex display to resolve sizing issues

* fix: made WidgetContainer flex to center inline WidgetGrid

--- a/components/atomic/Tooltip/styles.module.css
+++ b/components/atomic/Tooltip/styles.module.css
@@ -10,12 +10,14 @@
     max-width: 33.333vw;
     width: max-content;
     bottom: 30px;
-    transform: translateX(-46%);
+    left: 50%;
+    transform: translateX(-50%);
+
 
     @media screen and (min-width: 1130px) {
         max-width: calc((100vw / 7) - 1vw);
         font-size: 0.6rem;
-        transform: translateX(-47%);
+        transform: translateX(-50%);
     }
 }
 
